--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,9 @@
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Edgware.RELEASE</spring-cloud.version>
 		<mybatis-spring-boot-starter.versin>1.3.1</mybatis-spring-boot-starter.versin>
+		<mybatis.generator.version>1.3.6</mybatis.generator.version>
+		<pageHelper-starter.version>1.2.3</pageHelper-starter.version>
+		<druid.version>1.1.2</druid.version>
 		<commons.lang.version>2.6</commons.lang.version>
 		<commons.fileupload.version>1.3.1</commons.fileupload.version>
 		<commons.io.version>2.6</commons.io.version>
@@ -50,6 +53,11 @@
 				<version>${mybatis-spring-boot-starter.versin}</version>
 			</dependency>
 			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>druid-spring-boot-starter</artifactId>
+				<version>${druid.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>commons-lang</groupId>
 				<artifactId>commons-lang</artifactId>
 				<version>${commons.lang.version}</version>
@@ -63,6 +71,11 @@
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
 				<version>${commons.io.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.pagehelper</groupId>
+				<artifactId>pagehelper-spring-boot-starter</artifactId>
+				<version>${pageHelper-starter.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
