--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<spring-cloud.version>Edgware.RELEASE</spring-cloud.version>
 		<mybatis-spring-boot-starter.versin>1.3.1</mybatis-spring-boot-starter.versin>
 		<mybatis.generator.version>1.3.6</mybatis.generator.version>
 		<pageHelper-starter.version>1.2.3</pageHelper-starter.version>
@@ -30,6 +29,7 @@
 		<commons.lang.version>2.6</commons.lang.version>
 		<commons.fileupload.version>1.3.1</commons.fileupload.version>
 		<commons.io.version>2.6</commons.io.version>
+		<swagger.ui.version>2.7.0</swagger.ui.version>
 	</properties>
 	<modules>
 		<module>security-admin</module>
@@ -40,13 +40,6 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
 			<dependency>
 				<groupId>org.mybatis.spring.boot</groupId>
 				<artifactId>mybatis-spring-boot-starter</artifactId>
@@ -76,6 +69,17 @@
 				<groupId>com.github.pagehelper</groupId>
 				<artifactId>pagehelper-spring-boot-starter</artifactId>
 				<version>${pageHelper-starter.version}</version>
+			</dependency>
+			<!--Swagger2-->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger2</artifactId>
+				<version>${swagger.ui.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger-ui</artifactId>
+				<version>${swagger.ui.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
