--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<spring-cloud.version>Edgware.RELEASE</spring-cloud.version>
 		<mybatis-spring-boot-starter.versin>1.3.1</mybatis-spring-boot-starter.versin>
 		<mybatis.generator.version>1.3.6</mybatis.generator.version>
 		<pageHelper-starter.version>1.2.3</pageHelper-starter.version>
@@ -33,6 +34,7 @@
 	</properties>
 	<modules>
 		<module>security-admin</module>
+		<module>security-oauth2.0</module>
 	</modules>
 	<dependencies>
 
