--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<commons.fileupload.version>1.3.1</commons.fileupload.version>
 		<commons.io.version>2.6</commons.io.version>
 		<swagger.ui.version>2.7.0</swagger.ui.version>
+		<org.aspectj.version>1.8.13</org.aspectj.version>
 	</properties>
 	<modules>
 		<module>security-admin</module>
@@ -82,6 +83,11 @@
 				<groupId>io.springfox</groupId>
 				<artifactId>springfox-swagger-ui</artifactId>
 				<version>${swagger.ui.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.aspectj</groupId>
+				<artifactId>aspectjweaver</artifactId>
+				<version>${org.aspectj.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
