--- a/security-admin/src/main/resources/application.properties
+++ b/security-admin/src/main/resources/application.properties
@@ -42,6 +42,8 @@ spring.datasource.druid.aop-patterns=com.common.system.service.*
 ############################Druid配置结束#############################
 ######################################################################
 mybatis.mapper-locations=classpath:mapper/sys/*.xml,classpath:mapper/oss/*.xml
+#######mapper
+#mappers 多个接口时逗号隔开
 
 #####分页插件########
 pagehelper.helperDialect=mysql
