--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<mybatis-spring-boot-starter.versin>1.3.1</mybatis-spring-boot-starter.versin>
 		<mybatis.generator.version>1.3.6</mybatis.generator.version>
 		<pageHelper-starter.version>1.2.3</pageHelper-starter.version>
+		<mapper-spring-boot.version>1.2.0</mapper-spring-boot.version>
 		<druid.version>1.1.2</druid.version>
 		<commons.lang.version>2.6</commons.lang.version>
 		<commons.fileupload.version>1.3.1</commons.fileupload.version>
@@ -68,6 +69,13 @@
 				<artifactId>commons-io</artifactId>
 				<version>${commons.io.version}</version>
 			</dependency>
+			<!--通用Mapper插件-->
+			<dependency>
+				<groupId>tk.mybatis</groupId>
+				<artifactId>mapper-spring-boot-starter</artifactId>
+				<version>${mapper-spring-boot.version}</version>
+			</dependency>
+			<!--分页插件-->
 			<dependency>
 				<groupId>com.github.pagehelper</groupId>
 				<artifactId>pagehelper-spring-boot-starter</artifactId>
