--- a/security-admin/src/main/resources/application.properties
+++ b/security-admin/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8010
+logging.config=classpath:logback.xml
+logging.level.org.springframework.web=info
+#logging.level.com.gogbuy.security.admin=info
 spring.application.name=security-admin
-
 #jackson返回日期格式化
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.joda-date-time-format=yyyy-MM-dd HH:mm:ss
@@ -42,6 +44,7 @@ spring.datasource.druid.aop-patterns=com.common.system.service.*
 ############################Druid配置结束#############################
 ######################################################################
 mybatis.mapper-locations=classpath:mapper/sys/*.xml,classpath:mapper/oss/*.xml
+
 #######mapper
 #mappers 多个接口时逗号隔开
 
