--- a/security-admin/pom.xml
+++ b/security-admin/pom.xml
@@ -49,6 +49,10 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>tk.mybatis</groupId>
+			<artifactId>mapper-spring-boot-starter</artifactId>
+		</dependency>
 		<!--pagehelper-->
 		<dependency>
 			<groupId>com.github.pagehelper</groupId>
