--- a/security-admin/src/main/resources/application.properties
+++ b/security-admin/src/main/resources/application.properties
@@ -47,7 +47,8 @@ mybatis.mapper-locations=classpath:mapper/sys/*.xml,classpath:mapper/oss/*.xml
 
 #######mapper
 #mappers 多个接口时逗号隔开
-
+mapper.mappers=com.gogbuy.security.admin.modules.sys.repository
+mapper.identity=MYSQL
 #####分页插件########
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
