--- a/security-admin/pom.xml
+++ b/security-admin/pom.xml
@@ -84,10 +84,10 @@
 			<artifactId>swagger-bootstrap-ui</artifactId>
 			<version>1.6</version>
 		</dependency>
-		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjweaver</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.aspectj</groupId>-->
+			<!--<artifactId>aspectjweaver</artifactId>-->
+		<!--</dependency>-->
 	</dependencies>
 
 	<build>
