自动生成相关资源

--- a/security-admin/src/main/resources/application.properties
+++ b/security-admin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8010
-server.context-path=/security
+#server.context-path=/security
 logging.config=classpath:logback.xml
 logging.level.org.springframework.web=info
 #logging.level.com.gogbuy.security.admin=info
