--- a/security-admin/src/main/resources/application.properties
+++ b/security-admin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8010
-#server.context-path=/security
+server.context-path=/security
 logging.config=classpath:logback.xml
 logging.level.org.springframework.web=info
 #logging.level.com.gogbuy.security.admin=info
@@ -45,11 +45,11 @@ spring.datasource.druid.aop-patterns=com.common.system.service.*
 ############################Druid配置结束#############################
 ######################################################################
 mybatis.mapper-locations=classpath:mapper/sys/*.xml,classpath:mapper/oss/*.xml
+mybatis-plus.mapper-locations=classpath:mapper/sys/*.xml,classpath:mapper/oss/*.xml
 
 #######mapper
 #mappers 多个接口时逗号隔开
-mapper.mappers=com.gogbuy.security.admin.modules.sys.repository
-mapper.identity=MYSQL
+
 #####分页插件########
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
