--- a/security-oauth2.0/pom.xml
+++ b/security-oauth2.0/pom.xml
@@ -16,6 +16,7 @@
 	<description>Demo project for Spring Boot</description>
 
 	<dependencies>
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-oauth2</artifactId>
@@ -23,6 +24,7 @@
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>${mybatis-spring-boot-starter.versin}</version>
 		</dependency>
 
 		<dependency>
@@ -36,14 +38,10 @@
 			<scope>test</scope>
 		</dependency>
 		<!--数据库连接池-->
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>druid-spring-boot-starter</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>tk.mybatis</groupId>
-			<artifactId>mapper-spring-boot-starter</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.alibaba</groupId>-->
+			<!--<artifactId>druid-spring-boot-starter</artifactId>-->
+		<!--</dependency>-->
 	</dependencies>
 
 	<dependencyManagement>
