完善security URL拦截匹配判断

--- a/security-admin/src/main/resources/application.properties
+++ b/security-admin/src/main/resources/application.properties
@@ -44,12 +44,10 @@ spring.datasource.druid.aop-patterns=com.common.system.service.*
 ######################################################################
 ############################Druid配置结束#############################
 ######################################################################
-mybatis.mapper-locations=classpath:mapper/sys/*.xml,classpath:mapper/oss/*.xml
-mybatis-plus.mapper-locations=classpath:mapper/sys/*.xml,classpath:mapper/oss/*.xml
-
-#######mapper
-#mappers 多个接口时逗号隔开
-
+###系统设置没有用到mybatis-plus，因为之前写好了，不想修改了
+mybatis.mapper-locations=classpath:mapper/sys/*.xml
+###如果后面有用到mybatis-plus,在这下面添加，即可使用mybatis-plus相关功能
+mybatis-plus.mapper-locations=classpath:mapper/oss/*.xml,classpath:mapper/sys/*.xml
 #####分页插件########
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
