实现JWT对Rest api做保护

--- a/security-admin/src/main/resources/application.properties
+++ b/security-admin/src/main/resources/application.properties
@@ -54,3 +54,12 @@ pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
 ######·ÖÒ³²å¼þEND#####
+
+####JWT######
+#Number of minutes
+gog.security.jwt.tokenExpirationTime=720
+#Minutes
+gog.security.jwt.refreshTokenExpTime=7200
+gog.security.jwt.tokenIssuer=http://www.gogbuy.com
+gog.security.jwt.tokenSigningKey=xm8EV6Hy5RMFK4EEACIDAwQus
+############
