自定义实现OAuth2.0

--- a/security-admin/src/main/resources/application.properties
+++ b/security-admin/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.jackson.joda-date-time-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.locale=zh_CN
 spring.jackson.time-zone=GMT+8
 
+spring.redis.host=127.0.0.1
+spring.redis.password=123456
+
 ###################################################
 ############## mysql config #######################
 ###################################################
@@ -55,11 +58,11 @@ pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
 ######·ÖÒ³²å¼þEND#####
 
-####JWT######
+####token######
 #Number of minutes
-gog.security.jwt.tokenExpirationTime=720
+gog.security.token.tokenExpirationTime=300
 #Minutes
-gog.security.jwt.refreshTokenExpTime=7200
-gog.security.jwt.tokenIssuer=http://www.gogbuy.com
-gog.security.jwt.tokenSigningKey=xm8EV6Hy5RMFK4EEACIDAwQus
+gog.security.token.refreshTokenExpTime=7200
+gog.security.token.tokenIssuer=http://www.gogbuy.com
+gog.security.token.tokenSigningKey=xm8EV6Hy5RMFK4EEACIDAwQus
 ############
