--- a/security-admin/pom.xml
+++ b/security-admin/pom.xml
@@ -109,7 +109,11 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
